--- a/localisation/english/MD_focus_GER_l_english.yml
+++ b/localisation/english/MD_focus_GER_l_english.yml
@@ -2484,7 +2484,7 @@
  Germany_Mech.27.b: "Suspend all involved personnel and issue a public apology."
  Germany_Mech.27.c: "Downplay the allegations and manage the media narrative."
  Germany_Mech.28.t: "The insolvency of Philipp Holzmann AG"
- Germany_Mech.28.d: "The insolvency of Philipp Holzmann AG in 2002 was a significant event in Germany’s post-reunification economic history. Founded in 1849, the company grew to become one of the most prestigious construction firms in Europe, responsible for iconic projects like the Frankfurt Stock Exchange and the Suez Canal. However, by the late 1990s, Holzmann was deeply in debt, mismanaging expansion and struggling with profitability. In 1999, Chancellor Gerhard Schröder, seeking to protect German industry and jobs, personally stepped in to negotiate a government-backed rescue plan. The 4.3 billion DM bailout, with loans and guarantees from banks and the federal government, temporarily staved off collapse, making Schröder a savior of the company in the eyes of many. However, the rescue only delayed a deeper financial crisis. By 2002, the company’s unsustainable debts and market difficulties overwhelmed it, forcing it into insolvency. The failure of Holzmann, despite government intervention, symbolized the limits of state support in a globalized economy and exposed vulnerabilities in the German construction sector during that period."
+ Germany_Mech.28.d: "The insolvency of Philipp Holzmann AG was a significant event in Germany’s post-reunification economic history. Founded in 1849, the company grew to become one of the most prestigious construction firms in Europe, responsible for iconic projects like the Frankfurt Stock Exchange and the Suez Canal. However, by the late 1990s, Holzmann was deeply in debt, mismanaging expansion and struggling with profitability. In 1999, Chancellor Gerhard Schröder, seeking to protect German industry and jobs, personally stepped in to negotiate a government-backed rescue plan. The 4.3 billion DM bailout, with loans and guarantees from banks and the federal government, temporarily staved off collapse, making Schröder a savior of the company in the eyes of many. However, the rescue only delayed a deeper financial crisis. By 2002, the company’s unsustainable debts and market difficulties overwhelmed it, forcing it into insolvency. The failure of Holzmann, despite government intervention, symbolized the limits of state support in a globalized economy and exposed vulnerabilities in the German construction sector during that period."
  Germany_Mech.28.a: "Save them again"
  Germany_Mech.28.b: "waste of money"
  Germany_Mech.29.t: "Scandal at Bundeswehr University Hamburg: A Breach of Trust"
@@ -2502,10 +2502,10 @@
  Germany_Mech.31.a: "Purge the ranks of identified extremists and reform recruitment protocols."
  Germany_Mech.31.b: "Introduce mandatory training on democratic values and military ethics."
  Germany_Mech.31.c: "Focus on damage control and public relations."
- Germany_Mech.32.t: "The insolvency of Philipp Holzmann AG"
- Germany_Mech.32.d: "The insolvency of Philipp Holzmann AG was a significant event in Germany’s post-reunification economic history. Founded in 1849, the company grew to become one of the most prestigious construction firms in Europe, responsible for iconic projects like the Frankfurt Stock Exchange and the Suez Canal. However, by the late 1990s, Holzmann was deeply in debt, mismanaging expansion and struggling with profitability. In 1999, Chancellor Gerhard Schröder, seeking to protect German industry and jobs, personally stepped in to negotiate a government-backed rescue plan. The 4.3 billion DM bailout, with loans and guarantees from banks and the federal government, temporarily staved off collapse, making Schröder a savior of the company in the eyes of many. However, the rescue only delayed a deeper financial crisis. By 2002, the company’s unsustainable debts and market difficulties overwhelmed it, forcing it into insolvency. The failure of Holzmann, despite government intervention, symbolized the limits of state support in a globalized economy and exposed vulnerabilities in the German construction sector during that period."
- Germany_Mech.32.a: "Save them again"
- Germany_Mech.32.b: "we can´t waste more money"
+ Germany_Mech.32.t: "The Collapse of the DotCom Bubble"
+ Germany_Mech.32.d: "The once-thriving tech sector has suffered a catastrophic collapse, as the Dotcom bubble bursts, wiping out vast amounts of speculative capital in Germany's *Neuer Markt*. Tech startups that once promised limitless growth have crumbled, stock values have plummeted, and thousands of investors are facing devastating losses. The collapse of the *Neuer Markt* has triggered a wave of bankruptcies, job losses, and a major downturn in market confidence. This financial crash sends shockwaves through the entire economy, exposing the dangers of unchecked speculation and forcing the government to grapple with an economic crisis."
+ Germany_Mech.32.a: "Lower the Impact"
+ Germany_Mech.32.b: "The Market will regulate it self"
 
 
 #MIGRATION
@@ -2764,6 +2764,7 @@
  GER_idea_mercedes_benz_company_desc: "Mercedes-Benz has been partially sub-contracted to provide essential parts, equipment and maintenance to the Bundeswehr's utility vehicle fleets."
  GER_idea_rhineland_industry: "Rhineland Industry"
  GER_idea_rhineland_industry_desc: "The Rhineland-Pfalz is one of the central industrial and construction regions in the country, as-well as being one of the biggest exports of natural resources such as steel and coal in the country."
+
  GER_idea_war_reparations: "War Reparations Debt"
  GER_idea_war_reparations_desc: "The past of Germany's previous crimes through-out the 1st and 2nd World War still loom over its head; as does its mass of war reparation debt, owed to the Allies.\nIt will take years to pay off this debt, we estimate it will be §YOctober 2010§! roughly before it is fully paid off.\n§W--------------§!\nThis National Spirit will be §Gautomatically Removed§! once we have §YPaid Off Our War Debt§!, or we can §RRemove§! it by completing the §HEnd of War Reparations§! Focus."
  GER_idea_renewable_energy_projects_phase_one: "Renewable Energy Projects: Phase 1"
@@ -4429,47 +4430,16 @@
  GER_news.05.d: "At the turn of the millennium, the rapid rise of internet-based companies led to the formation of the dotcom bubble, characterized by soaring stock prices and unprecedented speculation in technology and internet-related firms. This euphoria was reflected in the Neuer Markt, Germany’s answer to the NASDAQ, which had been established to fuel the growth of new technology startups. Companies with little to no proven profitability saw their stock prices skyrocket, driven by investor optimism about the boundless potential of the internet economy. However, by the year 2000, the bubble began to burst. Overvalued tech companies collapsed as they failed to deliver on their promises of rapid growth and profit. Confidence in the market evaporated, and the Neuer Markt became a symbol of excessive speculation and reckless investment. Once a beacon of future-oriented innovation, the Neuer Markt saw a catastrophic decline as investors fled en masse. Between 2000 and 2003, the index lost over 90% of its value, wiping out billions of euros in market capitalization and devastating countless investors. The collapse signaled not only the end of the dotcom frenzy but also a sobering lesson on the risks of unchecked speculation in emerging markets."
  GER_news.05.a: "ok"
 
- GER_neuer_markt: "Neuer Markt"
- GER_neuer_markt_desc: "The Neuer Markt, established in 1997, was Germany’s attempt to create a stock market segment for young, innovative companies, particularly in the technology and biotechnology sectors. Modeled after the NASDAQ in the United States, the Neuer Markt aimed to provide a platform for high-growth, future-oriented companies to access capital through initial public offerings (IPOs). It was seen as a major step in modernizing the German financial market, encouraging entrepreneurial spirit, and fostering innovation in Europe. With relaxed listing requirements compared to traditional exchanges, the Neuer Markt attracted numerous startups, offering investors the opportunity to participate in the booming internet and tech industries. It quickly became a symbol of the new economy, where technological progress was expected to revolutionize traditional business models."
+ GER_neuer_markt_idea: "Neuer Markt"
+ GER_neuer_markt_idea_desc: "The Neuer Markt, established in 1997, was Germany’s attempt to create a stock market segment for young, innovative companies, particularly in the technology and biotechnology sectors. Modeled after the NASDAQ in the United States, the Neuer Markt aimed to provide a platform for high-growth, future-oriented companies to access capital through initial public offerings (IPOs). It was seen as a major step in modernizing the German financial market, encouraging entrepreneurial spirit, and fostering innovation in Europe. With relaxed listing requirements compared to traditional exchanges, the Neuer Markt attracted numerous startups, offering investors the opportunity to participate in the booming internet and tech industries. It quickly became a symbol of the new economy, where technological progress was expected to revolutionize traditional business models."
  GER_neuer_markt_colapse: "The Collapse of the Neuer Markt"
  GER_neuer_markt_colapse_desc: "However, the optimism surrounding the Neuer Markt was short-lived. By the early 2000s, the dotcom bubble burst, and many companies listed on the exchange failed to live up to their lofty promises. Overvalued stocks, poor corporate governance, and a lack of sustainable business models led to plummeting investor confidence. The once-promising Neuer Markt became synonymous with speculation, volatility, and financial instability. From its peak in 2000, the market lost over 90% of its value, as companies went bankrupt or were delisted. By 2003, the Neuer Markt was shut down entirely, a victim of its own unbridled exuberance and the broader collapse of the dotcom sector. The collapse served as a cautionary tale about the dangers of speculative bubbles and the need for strong oversight in emerging markets."
+ GER_neuer_markt_colapse_I: "Government Intervention to Mitigate New Market Crash"
+ GER_neuer_markt_colapse_I_desc: "In response to the devastating collapse of the *Neuer Markt*, the government has decided to step in and provide financial relief to cushion the blow. By injecting capital into key industries and offering support to struggling companies, the goal is to stabilize the economy and prevent further financial panic. While this intervention might limit the short-term damage, it comes at the cost of increased public spending and growing national debt."
+ 
+ GER_neuer_markt_colapse_II: "Let the Market Regulate Itself"
+ GER_neuer_markt_colapse_II_desc: "Believing in the principles of a free market, the government has opted to let the economy recover on its own after the collapse of the *Neuer Markt*. This hands-off approach assumes that the market will correct itself through natural cycles of boom and bust. Although this may restore long-term balance, the immediate aftermath will be harsh, with businesses failing and unemployment rising as the financial sector slowly restructures."
 
- GER_Neuer_Markt_decision: "The Dotcom Bubble"
- GER_Neuer_Markt_decision_desc: "The Dotcom Bubble refers to the rapid rise and collapse of internet-based companies in the late 1990s and early 2000s. Fueled by speculative investments, tech stock prices soared far beyond their actual financial performance. Investor enthusiasm, driven by the promise of a digital revolution, led to unsustainable valuations, with many companies going public despite lacking profitability. By 2000, the bubble was on the verge of bursting, as signs of overvaluation and weak business models became clear. \nThere was still a chance to prevent a full-scale collapse through regulatory measures and financial interventions, though these would have required significant resources. The key question remained: should drastic steps be taken to stabilize the market, or was the collapse inevitable? It was a pivotal moment where decisive actions could have reshaped financial history."
-
- GER_Market_collaps: "Market collaps"
- GER_Implement_stricter_corporate_reporting_requirements: "Implement Stricter Corporate Reporting Requirements"
- GER_increase_financial_education_and_investor_awareness: "Increase Financial Education and Investor Awareness"
- GER_enforce_suitable_business_practice_campain: "Enforce Suitable Business Practice Campaign"
- GER_provide_tax_incentives_for_Startups: "Provide Tax Incentives for Startups"
- GER_provide_short_term_loans: "Provide Short-Term Loans"
- GER_more_regulations_for_stock_market: "Implement More Regulations for the Stock Market"
- GER_subsidies_for_technologie_companies: "Provide Subsidies for Technology Companies"
- GER_establish_early_economic_warning_system: "Establish Early Economic Warning System"
- GER_promote_foreign_investments: "Promote Foreign Investments"
- GER_support_mergers_and_acquisitions: "Support Mergers and Acquisitions"
-
- GER_Implement_stricter_corporate_reporting_requirements_desc: "Introduce more stringent reporting standards to ensure transparency and accountability in corporate financial disclosures, reducing the risk of fraud and promoting  investor confidence."
- 
- GER_increase_financial_education_and_investor_awareness_desc: "Enhance financial literacy programs and investor awareness campaigns to help individuals make informed decisions, reducing the likelihood of speculative bubbles and  uninformed investments."
- 
- GER_enforce_suitable_business_practice_campain_desc: "Launch a campaign promoting ethical and sustainable business practices, ensuring that companies follow responsible and long-term growth strategies in line with  regulatory requirements."
- 
- GER_provide_tax_incentives_for_Startups_desc: "Offer tax breaks and incentives to encourage the creation and growth of startups, particularly in innovative sectors, to stimulate entrepreneurship and job creation."
- 
- GER_provide_short_term_loans_desc: "Provide short-term loans to businesses facing liquidity issues, offering them immediate financial support to maintain operations and weather temporary economic  challenges."
- 
- GER_more_regulations_for_stock_market_desc: "Implement additional regulations in the stock market to prevent excessive speculation and ensure more stable, predictable market conditions for investors."
- 
- GER_subsidies_for_technologie_companies_desc: "Provide targeted subsidies to technology companies to support their research, development, and growth, fostering innovation and strengthening the technological sector."
- 
- GER_establish_early_economic_warning_system_desc: "Create an early warning system to detect signs of economic instability, allowing for proactive measures to mitigate potential crises before they escalate."
- 
- GER_promote_foreign_investments_desc: "Encourage foreign investment through favorable policies and incentives, enhancing the country's access to global capital and fostering economic growth."
- 
- GER_support_mergers_and_acquisitions_desc: "Facilitate and support mergers and acquisitions to create stronger, more competitive businesses, ensuring that struggling companies can consolidate to remain viable."
-
- GER_Market_collaps_desc: "A severe and sudden downturn in the market, resulting in significant losses for investors and widespread financial instability. The collapse would lead to the failure of many companies, a loss of confidence in the economy, and long-term negative effects on investment and growth."
 
  GER_Leopard_trophy_history_entry: "Leopard Trophy"
 
